<resources>
    <string name="app_name">The Library</string>
    <string name="search_play_books_lbl">Search Play Books</string>
    <string name="home_lbl">Home</string>
    <string name="library_lbl">Library</string>
    <string name="wishlist_lbl">Wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_like_don_t_make_me_think_revisit_lbl">More like Don\'t Make Me Think, Revisit...</string>
    <string name="ebooks_for_you_lbl">Ebooks for you</string>
    <string name="on_your_wishlist_lbl">On your wishlist</string>
    <string name="audiobooks_for_you_lbl">Audiobooks for you</string>
    <string name="download_lbl">Download</string>
    <string name="delete_from_your_library_lbl">Delete from your library</string>
    <string name="add_to_shelves_lbl">Add to shelves...</string>
    <string name="mark_as_read_lbl">Mark as read</string>
    <string name="about_this_book_lbl">About this book</string>
    <string name="free_sample_lbl">Free Sample</string>
    <string name="add_to_wishlist_lbl">Add to wishlist</string>
    <string name="books_that_you_buy_lbl">Books that you buy on the Google Play website can be read in this app.</string>
    <string name="about_this_ebook_lbl">About this ebook</string>
    <string name="ratings_and_reviews_lbl">Ratings and reviews</string>
    <string name="five_lbl">5</string>
    <string name="one_lbl">1</string>
    <string name="two_lbl">2</string>
    <string name="three_lbl">3</string>
    <string name="four_lbl">4</string>
    <string name="sort_by_lbl">Sort by:</string>
    <string name="view_as_lbl">View as</string>
    <string name="list_lbl">List</string>
    <string name="large_grid_lbl">Large grid</string>
    <string name="small_grid_lbl">Small grid</string>
    <string name="add_to_your_library_lbl">Add to your library</string>
    <string name="recently_opened_lbl">Recently opened</string>
    <string name="title_lbl">Title</string>
    <string name="author_lbl">Author</string>
    <string name="recent_lbl">Recent</string>
    <string name="add_to_shelves_title">Add to shelves</string>
    <string name="results_from_google_play_lbl">Results from Google Play</string>
    <string name="no_shelves_lbl">No shelves</string>
    <string name="create_new_lbl">Create new</string>
    <string name="create_shelf_lbl">Create shelf</string>
    <string name="enter_new_shelf_lbl">Enter new shelf name</string>
    <string name="_0_50_lbl">0/50</string>
    <string name="rename_your_shelf_name_lbl">Rename your shelf name</string>
    <string name="delete_shelf_lbl">Delete shelf</string>
    <string name="rename_shelf_lbl">Rename shelf</string>
    <string name="remove_from_your_shelf_lbl">Delete from your shelf</string>
    <string name="ebook_lbl">EBook</string>
    <string name="sample_lbl">Sample</string>
</resources>