<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookRatingAndReviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/actionBarRatingAndReview"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBackRatingAndReview"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_secondary_24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleRatingAndReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="More Like Fingersmiths"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <include
            android:id="@+id/vpRatingAndReviewScreen"
            layout="@layout/viewpod_rating_and_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actionBarRatingAndReview" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupRatingAndReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vpRatingAndReviewScreen"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_medium_3">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_55dp"
                android:paddingBottom="@dimen/margin_10dp"
                android:text="@string/one_lbl"
                android:textSize="@dimen/text_regular_2x"
                app:chipEndPadding="@dimen/margin_10dp"
                app:chipIcon="@drawable/ic_baseline_star_24dp"
                app:chipIconSize="@dimen/margin_medium_3"
                app:chipStartPadding="@dimen/margin_10dp"
                app:chipStrokeColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_55dp"
                android:text="@string/two_lbl"
                android:textSize="@dimen/text_regular_2x"
                app:chipEndPadding="@dimen/margin_10dp"
                app:chipIcon="@drawable/ic_baseline_star_24dp"
                app:chipIconSize="@dimen/margin_medium_3"
                app:chipStartPadding="@dimen/margin_10dp"
                app:chipStrokeColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_55dp"
                android:text="@string/three_lbl"
                android:textSize="@dimen/text_regular_2x"
                app:chipEndPadding="@dimen/margin_10dp"
                app:chipIcon="@drawable/ic_baseline_star_24dp"
                app:chipIconSize="@dimen/margin_medium_3"
                app:chipStartPadding="@dimen/margin_10dp"
                app:chipStrokeColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_55dp"
                android:text="@string/four_lbl"
                android:textSize="@dimen/text_regular_2x"
                app:chipEndPadding="@dimen/margin_10dp"
                app:chipIcon="@drawable/ic_baseline_star_24dp"
                app:chipIconSize="@dimen/margin_medium_3"
                app:chipStartPadding="@dimen/margin_10dp"
                app:chipStrokeColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_55dp"
                android:text="@string/five_lbl"
                android:textSize="@dimen/text_regular_2x"
                app:chipEndPadding="@dimen/margin_10dp"
                app:chipIcon="@drawable/ic_baseline_star_24dp"
                app:chipIconSize="@dimen/margin_medium_3"
                app:chipStartPadding="@dimen/margin_10dp"
                app:chipStrokeColor="@color/colorAccent" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRatingAndReviewScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chipGroupRatingAndReview"
            android:layout_marginStart="@dimen/margin_card_medium_2"
            android:layout_marginEnd="@dimen/margin_card_medium_2"
            tools:listitem="@layout/view_holder_review_book_detail" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>