<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llRatingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="3.9"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big_2x_5"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rbBookDetail"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingsMarkBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="95 ratings"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/llRatingValue"
        android:layout_marginStart="@dimen/margin_large"
        android:paddingTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_toEndOf="@+id/llRatingValue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRBValue5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/five_lbl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <com.flexath.thelibrary.views.components.RatingCustomLinearProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:elevation="@dimen/margin_medium"
                app:customCornerRadius="4dp"
                app:customProgress="250"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRBValue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/four_lbl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <com.flexath.thelibrary.views.components.RatingCustomLinearProgressBar
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:elevation="@dimen/margin_medium"
                app:customCornerRadius="4dp"
                app:customProgress="250"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRBValue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/three_lbl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <com.flexath.thelibrary.views.components.RatingCustomLinearProgressBar
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:elevation="@dimen/margin_medium"
                app:customCornerRadius="4dp"
                app:customProgress="250"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRBValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/two_lbl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <com.flexath.thelibrary.views.components.RatingCustomLinearProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:elevation="@dimen/margin_medium"
                app:customCornerRadius="4dp"
                app:customProgress="250"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRBValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/one_lbl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <com.flexath.thelibrary.views.components.RatingCustomLinearProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"

                app:customCornerRadius="4dp"
                app:customProgress="250" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>