<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_medium_3"
    android:paddingBottom="@dimen/margin_xxlarge">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ivCoverBookListBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        app:cardCornerRadius="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/dummy_ebook_banner" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:layout_toEndOf="@+id/ivCoverBookListBottomSheet"
        android:maxLines="2"
        android:text="The Art of Learning"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWriterBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toEndOf="@+id/ivCoverBookListBottomSheet"
        android:maxLines="2"
        android:text="Josh Waitzkin"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/text_regular" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dotBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleBottomSheet"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_card_medium_2"
        android:layout_toEndOf="@+id/tvWriterBottomSheet"
        app:srcCompat="@drawable/ic_baseline_circle_secondary_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBookTypeBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleBottomSheet"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:layout_toEndOf="@+id/dotBottomSheet"
        android:text="Ebook"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/text_regular" />

    <View
        android:id="@+id/vHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/ivCoverBookListBottomSheet"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:background="@color/colorPrimaryLight" />

    <LinearLayout
        android:id="@+id/btnDownloadBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vHorizontalLine"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/download_secondary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/download_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDeleteBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDownloadBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/delete" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/delete_from_your_library_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAddToLibraryBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDeleteBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/delete" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/add_to_your_library_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAddToShelvesBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddToLibraryBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_add_secondary_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/add_to_shelves_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnMarkAsReadBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddToShelvesBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_done_secondary_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/mark_as_read_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAboutThisBookBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMarkAsReadBottomSheet"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/book" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/about_this_book_lbl"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>